# newaction

./: checks.json
.github/workflows/: hello_world.yaml
install/: local_setup.sh  setup.sh
install/examples_rclcpp_minimal_publisher/lib/examples_rclcpp_minimal_publisher/: publisher_member_function
install/examples_rclcpp_minimal_publisher/share/examples_rclcpp_minimal_publisher/: local_setup.sh  package.sh
install/examples_rclcpp_minimal_publisher/share/examples_rclcpp_minimal_publisher/cmake/: examples_rclcpp_minimal_publisherConfig.cmake
install/minimal_publisher/lib/minimal_publisher/: publisher_member_function
install/minimal_publisher/share/minimal_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/minimal_publisher/share/minimal_publisher/cmake/: minimal_publisherConfig.cmake
log/: latest_build  latest_graph  latest_test  latest_test-result
src/minimal_publisher/: CMakeLists.txt  main.cpp  member_function.cpp
src/minimal_publisher/include/: member_function.hh
src/minimal_publisher/test/: test_simple_publisher.cpp
